# kilroylib

./: .gitattributes  .gitignore  404.html  README.md  environment.yml  index.html  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: docs.yml  draft.yml  pypi.yml  test-multiplatform.yml  test.yml
kilroylib/: README.md  pyproject.toml
kilroylib/docs/: mkdocs.yml
kilroylib/docs/docs/: index.md
kilroylib/docs/docs/usage/: library.md
kilroylib/src/kilroylib/: __init__.py  data.py  modules.py  training.py  utils.py
kilroylib/src/kilroylib/training/: offline.py  online.py  state.py  stop.py
kilroylib/src/kilroylib/training/offline/: state.py  stop.py  trainer.py
kilroylib/src/kilroylib/training/online/: state.py  stop.py  trainer.py
notebooks/: actor_critic.ipynb  example.ipynb  simple_training.ipynb
search/: search_index.json
usage/: index.html
