# this file is needed to install the package from git without support for subdirectories
# see: https://github.com/python-poetry/poetry/issues/755

[tool.poetry]
name = "kilroylib"
version = "0.3.1"
description = "kilroy core library ⚙️"
readme = "kilroylib/README.md"
authors = ["kilroy <kilroymail@pm.me>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "https://github.com/kilroybot/kilroylib"
documentation = "https://kilroybot.github.io/kilroylib"
packages = [{ include = "kilroylib", from = "kilroylib/src" }]

[tool.poetry.dependencies]
python = "^3.9"
kilroyshare = "~0.6.0"
numpy = "^1.21"
dill = "^0.3"
aiofiles = "^0.8"

# dev
jupyterlab = { version = "^3.2", optional = true }
kilroyplot = { version = "^0.2", optional = true }

# test
pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["jupyterlab", "kilroyplot", "pytest"]
test = ["pytest"]

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
