[tool.poetry]
name = "kilroylib"
version = "0.1.0"
description = "kilroy core library ⚙️"
readme = "README.md"
authors = ["kilroy <kilroymail@pm.me>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
repository = "https://github.com/kilroybot/kilroylib"
documentation = "https://kilroybot.github.io/kilroylib"

[tool.poetry.dependencies]
python = "~3.9"
kilroyshare = "~0.2"
numpy = "^1.21"
dill = "^0.3"

# dev
jupyterlab = { version = "^3.1", optional = true }
matplotlib = { version = "^3.4", optional = true }
scipy = { version = "^1.7", optional = true }
jax = { version = "^0.2", extras = ["cpu"], optional = true }
torch = { version = "^1.10", optional = true }

# test
pytest = { version = "^6.2", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["jupyterlab", "matplotlib", "scipy", "jax", "torch", "pytest"]
test = ["pytest"]

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
